2010-12-10  Roland Clobus <rclobus@rclobus.nl>
	* client/common/client.c: Don't process zero num_soldiers on
	reconnect, to avoid setting statistics for viewers.

2010-12-08  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/gtkbugs.c, common/gtk/gtkbugs.h, client/gtk/gold.c,
	client/gtk/player.c, client/gtk/discard.c: Remove code for column
	resizing (was needed only for Gtk+ 2.6)

2010-12-07  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/gtkbugs.c, common/gtk/gtkbugs.h: Remove workaround for
	tooltips, because 2.12 is the minimum required version in configure.ac

2010-11-24  Ron Yorgason <yorgasor@cs.pdx.edu>
	* pioneers.nsi.in, server/Makefile.am, server/north_america.game: After
	nearly six years, this map finally moved from the contrib section on
	the website to the distributed version.

2010-11-10  Matt Perry <mattperry1976@gmail.com>
	* pioneers.nsi.in, server/Makefile.am, server/ubuntuland.game: New
	layout in the shape of the Ubuntu logo.

2010-11-07  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/plenty.c: Show the right amount to select in the year of
	plenty dialog after the dialog was closed.

2010-10-31  Roland Clobus <rclobus@rclobus.nl>
	* server/develop.c, client/ai/greedy.c: Let computer player trade after
	playing a monopoly development card. Play development card when the
	required resource can be got or when it can be obtained by trade.

2010-10-26  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Add -lm when needed (rint, sqrt).
	* editor/gtk/editor.c, common/gtk/game-rules.c,
	common/gtk/common_gtk.c, common/state.c, common/log.c, common/cards.c,
	server/gtk/main.c, server/turn.c, client/gtk/plenty.c,
	client/gtk/resource-table.c, client/gtk/name.c, client/gtk/gold.c,
	client/gtk/resource.c, client/gtk/quote.c, client/gtk/develop.c,
	client/gtk/legend.c, client/gtk/gameover.c, client/gtk/avahi-browser.c,
	client/gtk/discard.c, client/gtk/monopoly.c,
	client/gtk/settingscreen.c, client/gtk/chat.c, client/gtk/gui.c,