@@ -1,3 +1,7 @@
+2010-12-29  Roland Clobus <rclobus@rclobus.nl>
+	* client/common/client.c, client/ai/ai.c: Added a logbot, as suggested
+	by Andreas Steinel <lnxbil@users.sourceforge.net>
+
 2010-12-10  Roland Clobus <rclobus@rclobus.nl>
 	* client/common/client.c: Don't process zero num_soldiers on
 	reconnect, to avoid setting statistics for viewers.
